src/test/ui/consts/inline_asm.stderr
error[E0015]: inline assembly is not allowed in constants
  --> $DIR/inline_asm.rs:5:24
   |
LL | const _: () = unsafe { asm!("nop") };
   |                        ^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
